--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <!-- <script src="concat().js"></script> -->
-    <script src="to.string().js"></script>
+    <script src="every().js"></script>
 </body>
 </html>
